--- a/tipeoWeb.html
+++ b/tipeoWeb.html
@@ -27,6 +27,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/print.js/1.6.0/print.min.css">
     <link rel="stylesheet" href="./styles.css">
@@ -167,7 +168,7 @@
             onclick="abrirModalTabla('Andreani')">
             <i class="bi bi-arrows-fullscreen"></i>
         </button>
-        <button class="btn btn-light btn-sm"><i class="bi bi-graph-up"></i></button>
+        <button class="btn btn-light btn-sm historial-Andreani"><i class="bi bi-graph-up"></i></button>
       </div>
     </div>
   
@@ -200,7 +201,7 @@
             onclick="abrirModalTabla('Andesmar')">
             <i class="bi bi-arrows-fullscreen"></i>
         </button>
-        <button class="btn btn-light btn-sm"><i class="bi bi-graph-up"></i></button>
+        <button class="btn btn-light btn-sm historial-Andesmar"><i class="bi bi-graph-up"></i></button>
       </div>
     </div>
   
@@ -233,7 +234,7 @@
             onclick="abrirModalTabla('Oca')">
             <i class="bi bi-arrows-fullscreen"></i>
         </button>
-        <button class="btn btn-light btn-sm"><i class="bi bi-graph-up"></i></button>
+        <button class="btn btn-light btn-sm historial-oca"><i class="bi bi-graph-up"></i></button>
       </div>
     </div>
   
@@ -266,7 +267,7 @@
             onclick="abrirModalTabla('Cruz del Sur')">
             <i class="bi bi-arrows-fullscreen"></i>
         </button>
-        <button class="btn btn-light btn-sm"><i class="bi bi-graph-up"></i></button>
+        <button class="btn btn-light btn-sm historial-cds"><i class="bi bi-graph-up"></i></button>
       </div>
     </div>
   </div>  
@@ -814,6 +815,10 @@
 
     <!-- ExcelJS -->
     <script src="https://cdn.jsdelivr.net/npm/exceljs/dist/exceljs.min.js"></script>
+
+    <!-- Cargar FlatPickr -->
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script>
 
     <!-- TIPEO -->
     <script src="./js/firebase-init-Meli.js"></script>
