--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -99,6 +99,7 @@
                             Más
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="./tipeoWeb.html">Despacho Logistico</a>
                             <a class="dropdown-item" href="./MeliArPlaceit.html">Mercado Libre PlaceIt</a>
                             <a class="dropdown-item" href="./bnaPlaceIt.html">Tiendas Virtuales PlaceIt</a>
                             <a class="dropdown-item" href="./simbel.html">Venta Web PlaceIt</a>
