--- a/tipeoWeb.html
+++ b/tipeoWeb.html
@@ -71,7 +71,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a href="./index.html" class="nav-link">Etiquetado</a></li>
                     <li class="nav-item"><a href="./envios.html" class="nav-link">Envios Andesmar</a></li>
-                    <li class="nav-item"><a href="./despachos.html" class="nav-link active">Logistica</a></li>
+                    <li class="nav-item"><a href="./despachos.html" class="nav-link">Logistica</a></li>
                     <li class="nav-item"><a href="./bna.html" class="nav-link">Tiendas Virtuales</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -88,6 +88,7 @@
                             Más
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item active" href="./tipeoWeb.html">Despacho Logistico</a>
                             <a class="dropdown-item" href="./MeliArPlaceit.html">Mercado Libre PlaceIt</a>
                             <a class="dropdown-item" href="./bnaPlaceIt.html">Tiendas Virtuales PlaceIt</a>
                             <a class="dropdown-item" href="./simbel.html">Venta Web PlaceIt</a>
