--- a/tipeoWeb.html
+++ b/tipeoWeb.html
@@ -822,6 +822,7 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script>
 
     <!-- TIPEO -->
+     <script src="./js/features.js"></script>
     <script src="./js/firebase-init-Meli.js"></script>
     <script src="./js/firebase-init-tipeo.js"></script>
     <script src="./js/bot.js"></script>
