--- a/tipeoWeb.html
+++ b/tipeoWeb.html
@@ -823,6 +823,7 @@
 
     <!-- TIPEO -->
      <script src="./js/features.js"></script>
+     <script src="./js/firebase-init-stock.js"></script>
     <script src="./js/firebase-init-Meli.js"></script>
     <script src="./js/firebase-init-tipeo.js"></script>
     <script src="./js/bot.js"></script>
