--- a/bna.html
+++ b/bna.html
@@ -437,7 +437,7 @@
     <script src="./js/firebase-init-Bot.js"></script>
     <script src="./js/bot.js"></script>
     <script src="./js/firebase-init.js"></script>
-    <script src="./js/firebase-init-stock"></script>
+    <script src="./js/firebase-init-stock.js"></script>
     <script src="./js/firebase-init-Meli.js"></script>
     <script src="./js/bnaCards.js"></script>
     <script src="./js/features.js"></script>
