--- a/meliAr.html
+++ b/meliAr.html
@@ -657,7 +657,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-    <script src="./js/firebase-init-stock"></script>
+    <script src="./js/firebase-init-stock.js"></script>
     <script src="./js/firebase-init-Bot.js"></script>
     <script src="./js/bot.js"></script>
     <script src="./js/features.js"></script>
